# capstone2023_JY92

./: .gitignore  Blinky.py  CMakeLists.txt  HeartRate.py  KEY  README.md  SPO2_HR_Temp.py  hr_algorithm.py  i2c_scan.py  main.py  network-connection.py  spo2.py
BLE_localization/: RX_room1.py  patient_scanner.py  room_advert.py
app/: package-lock.json  package.json
app/server/: app.py
app/vue-ui-client/: README.md  package-lock.json  package.json  vue.config.js
app/vue-ui-client/src/: App.vue  functions.js  main.js
app/vue-ui-client/src/components/: BRval.vue  BodyDynamics.vue  BodyPosition.vue  HRandBRchart.vue  HRval.vue  Location.vue  SpO2chart.vue  Temperaturechart.vue  tempHRBR.vue
app/vue-ui-client/src/components/alerts/: alert.vue
app/vue-ui-client/src/router/: index.js
app/vue-ui-client/src/views/: Login.vue  MainDash.vue
data/: RR_Raw_Data.xlsx  Red_IR_extract.py  graph_data.py  output.txt  raw_data.txt
firmware/: main.py  test.py  test_max30101.py
firmware/BLE_localization/: main.py  patient_scanner.py  room1_advertiser.py
firmware/IMU/: Buzzer.py
firmware/IMU/imu_lying/: main.py  main_ble.py
firmware/IMU/imu_shoulder/: main.py  networking.py  twitching_and_lying_shoulder.py
firmware/IMU/imu_sitting/: main.py
firmware/IMU/imu_thigh/: main.py  main_multi.py  twitching_thigh.py
firmware/RR/: RR_Raw_Data.csv  RR_Raw_Data.txt  RR_Raw_Data_sub.csv  RR_emd.py
firmware/imu/imu_liying/: main.py
firmware/imu/imu_sitting/: imu_sitting_noemal.py  imu_sitting_normal.py
firmware/imu/imu_sitting/networking/: main.py
firmware/lib/: hr_algorithm.py  max30102.py  multi_tcp.py  networking.py  spo2_algorithm.py
firmware/network/: multi_client.py  network-connection-test.py  tcp_server.py
heartrate/: CMakeLists.txt  heartrate.c
imu/: imu_wifi_test.py
lib/: circular_buffer.py  hr_algorithm.py  max30102.py  network.py  networking.py  sockets.py  spo2_algorithm.py
lib/max30102/: __init__.py  circular_buffer.py
network/: multi_server.py  my_server.py  server.py  tcp.py  tcp_client.py  tcp_server.py  udp.py  udp_client.py  udp_server.py
network/data/: max30101_raw_data.txt  output.txt
other/imu/imu_liying/: main.py
other/imu/imu_sitting/: imu_sitting_normal.py
other/imu/imu_sitting/networking/: main.py
